修正一些字

--- a/lutai.dict.yaml
+++ b/lutai.dict.yaml
@@ -12,7 +12,6 @@ sort: original
 了	a
 的时候	a
 ①	a
-什么	a
 但是	a
 候	aa
 任何	aa
@@ -125,8 +124,8 @@ sort: original
 伊	act
 侰	actd
 偑	actn
-羲	acto
 伊	actp
+羲	actt
 佩	acu
 佩	acuo
 倭	acy
@@ -648,7 +647,6 @@ sort: original
 作	an
 安	an
 ①	an
-案	an
 羹	ana
 作	anar
 羹	anas
@@ -1174,7 +1172,6 @@ sort: original
 低	ay
 她们	ay
 ①	ay
-例如	ay
 羊	aya
 姜	ayb
 姜	ayby
@@ -1246,7 +1243,6 @@ sort: original
 儨	azzm
 里	b
 ①	b
-月	b
 应该	b
 里面	b
 府	ba
@@ -2226,7 +2222,6 @@ sort: original
 廐	bzuu
 几	c
 ①	c
-种	c
 几个	c
 灵魂	c
 专	ca
@@ -2404,7 +2399,6 @@ sort: original
 香	cf
 ①	cf
 ②	cf
-神	cf
 丰	cfa
 馠	cfad
 禵	cfam
@@ -3620,8 +3614,6 @@ sort: original
 和	d
 ①	d
 ②	d
-只是	d
-别人	d
 吧	da
 迚	daa
 迚	daak
@@ -3762,8 +3754,6 @@ sort: original
 品	dd
 ①	dd
 ②	dd
-哭	dd
-只要	dd
 患	dda
 唈	ddab
 嚣	ddad
@@ -4864,7 +4854,7 @@ sort: original
 岜	fab
 岜	fabs
 曦	fac
-曦	faco
+曦	fact
 晗	fad
 晗	fadi
 暢	faf
@@ -6631,7 +6621,6 @@ sort: original
 的	g
 就	g
 ①	g
-自己	g
 就是	g
 速	ga
 皅	gab
@@ -13205,7 +13194,6 @@ sort: original
 𫗴	kzou
 他	l
 你	l
-现	l
 现在	l
 睡觉	l
 特	la
@@ -13366,8 +13354,6 @@ sort: original
 中	ld
 ①	ld
 ②	ld
-臂	ld
-壁	ld
 訲	lda
 訲	ldas
 琄	ldb
@@ -14876,7 +14862,6 @@ sort: original
 瓆	lzzm
 璎	lzzy
 到	m
-道	m
 生	m
 生活	m
 终于	m
@@ -15884,7 +15869,7 @@ sort: original
 蚆	nabc
 蝑	nabi
 爔	nac
-爔	naco
+爔	nact
 蛜	nact
 焓	nad
 焓	nadi
@@ -19595,7 +19580,6 @@ sort: original
 对	q
 又	q
 ①	q
-东西	q
 对方	q
 鲜	qa
 虚假	qa
@@ -19710,7 +19694,6 @@ sort: original
 阿	qg
 限	qg
 ①	qg
-艰	qg
 鲌	qgb
 鲌	qgbv
 陙	qgc
@@ -19976,6 +19959,7 @@ sort: original
 鲙	qnr
 队	qnrk
 鲙	qnry
+雠	qnsi
 鷦	qnt
 鷦	qntn
 隂	qnu
@@ -20304,14 +20288,12 @@ sort: original
 鲗	qzod
 鳣	qzou
 鲫	qzq
-雠	qzqi
 鲫	qzqk
 虗	qzu
 虗	qzuh
 能	r
 想	r
 ①	r
-感觉	r
 想要	r
 样	ra
 相信	ra
@@ -21884,7 +21866,6 @@ sort: original
 大	s
 也	s
 ①	s
-需要	s
 大家	s
 达	sa
 达到	sa
@@ -22991,7 +22972,6 @@ sort: original
 我	t
 么	t
 ①	t
-我们	t
 看到	t
 把	ta
 揟	tab
@@ -25999,7 +25979,6 @@ sort: original
 来	v
 然	v
 ②	v
-然后	v
 为什么	v
 冷	va
 来到	va
@@ -27004,7 +26983,6 @@ sort: original
 去	w
 地	w
 ①	w
-问题	w
 地方	w
 须	wa
 见到	wa
@@ -28135,7 +28113,6 @@ sort: original
 确	ya
 好像	ya
 ①	ya
-如何	ya
 婿	yab
 妑	yabb
 婿	yabi
@@ -29245,8 +29222,6 @@ sort: original
 说	z
 ①	z
 ②	z
-记得	z
-说话	z
 近	za
 鎀	zaa
 鏅	zaab
@@ -30751,8 +30726,8 @@ sort: original
 俬	fjacrs
 侰	fjactd
 偑	fjactn
-羲	fjacto
 伊	fjactp
+羲	fjactt
 佩	fjacuo
 倭	fjacyb
 债	fjaczb
@@ -33876,7 +33851,7 @@ sort: original
 峳	fjfaal
 题	fjfaay
 岜	fjfabs
-曦	fjfaco
+曦	fjfact
 晗	fjfadi
 暢	fjfafj
 朄	fjfagm
@@ -41584,7 +41559,7 @@ sort: original
 螩	fjnaar
 蚆	fjnabc
 蝑	fjnabi
-爔	fjnaco
+爔	fjnact
 蛜	fjnact
 焓	fjnadi
 蛿	fjnadi
@@ -44284,6 +44259,7 @@ sort: original
 鲯	fjqnqv
 队	fjqnrk
 鲙	fjqnry
+雠	fjqnsi
 鷦	fjqntn
 隂	fjqnuc
 顦	fjqnum
@@ -44484,7 +44460,6 @@ sort: original
 隮	fjqzmo
 鲗	fjqzod
 鳣	fjqzou
-雠	fjqzqi
 鲫	fjqzqk
 虗	fjqzuh
 樇	fjraab
@@ -51935,7 +51910,7 @@ sort: original
 稴	cdj
 疻	cdm
 秞	cdy
-馠	cfa
+神	cfa
 痁	cfd
 馧	cff
 馟	cfh
@@ -52148,7 +52123,7 @@ sort: original
 彯	dcw
 唩	dcy
 串	dda
-咒	ddc
+哭	ddc
 喦	ddd
 辴	ddf
 啝	ddh
@@ -53545,7 +53520,7 @@ sort: original
 珮	lcu
 諉	lcy
 瞣	ldd
-劈	ldj
+臂	ldj
 諿	ldp
 琌	lfa
 瑥	lfd
@@ -53733,7 +53708,7 @@ sort: original
 眵	lvv
 訨	lvw
 瑤	lvy
-讟	lwj
+现	lwj
 詤	lwo
 珐	lwr
 盳	lww
@@ -53830,7 +53805,6 @@ sort: original
 夐	myn
 螩	naa
 蝑	nab
-蛜	nac
 蛭	nai
 蚹	nak
 蚮	nat
@@ -54413,6 +54387,7 @@ sort: original
 阦	qnf
 𬶋	qnj
 隤	qnl
+雠	qns
 顦	qnu
 鲴	qoh
 覷	qol
@@ -54448,7 +54423,6 @@ sort: original
 鲱	qyf
 阺	qyp
 鳣	qzo
-雠	qzq
 樤	raa
 楈	rab
 椺	rad
