修正一些字

--- a/lutai.dict.yaml
+++ b/lutai.dict.yaml
@@ -125,9 +125,9 @@ sort: original
 侰	actd
 偑	actn
 伊	actp
-羲	actt
 佩	acu
 佩	acuo
+羲	acut
 倭	acy
 倭	acyb
 债	acz
@@ -30727,8 +30727,8 @@ sort: original
 侰	fjactd
 偑	fjactn
 伊	fjactp
-羲	fjactt
 佩	fjacuo
+羲	fjacut
 倭	fjacyb
 债	fjaczb
 俋	fjadab
@@ -51547,7 +51547,8 @@ sort: original
 偰	acm
 僽	acn
 俵	acp
-羲	act
+侰	act
+羲	acu
 颔	ada
 偘	add
 巼	adi
