更新二四顶

--- a/lutaies.dict.yaml
+++ b/lutaies.dict.yaml
@@ -32415,7 +32415,7 @@ sort: original
 眵	lv_v	14
 訨	lv_w	0
 瑤	lv_y	0
-讟	lw_j	0
+现	lw_j	1387507
 詤	lw_o	0
 珐	lw_r	166
 盳	lw_w	0
@@ -66414,7 +66414,7 @@ sort: original
 眵	;lvv	14
 訨	;lvw	0
 瑤	;lvy	0
-讟	;lwj	0
+现	;lwj	1387507
 詤	;lwo	0
 珐	;lwr	166
 盳	;lww	0
@@ -82379,7 +82379,6 @@ sort: original
 𫗴	8kzou
 他	8l
 你	8l
-现	8l
 现在	8l
 睡觉	8l
 特	8la
@@ -84050,7 +84049,6 @@ sort: original
 瓆	8lzzm
 璎	8lzzy
 到	8m
-道	8m
 生	8m
 生活	8m
 终于	8m
@@ -102030,7 +102028,7 @@ sort: original
 眵	8lvv
 訨	8lvw
 瑤	8lvy
-讟	8lwj
+现	8lwj
 詤	8lwo
 珐	8lwr
 盳	8lww
