--- a/lutai.dict.yaml
+++ b/lutai.dict.yaml
@@ -16450,9 +16450,9 @@ sort: original
 燬	nkjl
 燌	nkjm
 蟦	nkjm
-煸	nkl
-蛯	nklc
+蝙	nkl
 煸	nklc
+蛯	nklc
 蝙	nklc
 烣	nkn
 烣	nknf
@@ -41850,8 +41850,8 @@ sort: original
 燬	fjnkjl
 燌	fjnkjm
 蟦	fjnkjm
-蛯	fjnklc
 煸	fjnklc
+蛯	fjnklc
 蝙	fjnklc
 烣	fjnknf
 蛆	fjnkqc
@@ -53715,7 +53715,7 @@ sort: original
 蛒	nkg
 煽	nkh
 燬	nkj
-蛯	nkl
+煸	nkl
 炦	nkq
 蠘	nkt
 熢	nlc
